...
                        }
                        
                        .listStyle(.inset)
                        .navigationDestination(for: String.self) { value in
                            ItemDetailView(url: value)
                        }
                        .navigationTitle("Pokemon")
                        .searchable(text: $searchText)
                        .autocorrectionDisabled(true)
                        .accessibilityIdentifier("scrollViewItem")
                    }//: LIST
                    .accessibilityIdentifier("scrollView")
                }
            }
        }.task {
            do {
                try await viewModel.fetchData()
            } catch {
...
