//
//  NanoNanoApp.swift
//  NanoNano
//
//  Created by Muhammad Rezky on 23/08/23.
//

import SwiftUI

@main
struct NanoNanoApp: App {
    var body: some Scene {
        WindowGroup {
            ContentView()
                .accessibilityIdentifier("mainView")
        }
    }
}
